--- a/category.html
+++ b/category.html
@@ -52,7 +52,7 @@
                   <a href="">Porsche</a>
                 </li>     
                 <li>
-                  <a href="">Motorsports <i class="fal fa-angle-down"></i></a>
+                  <a href="javascript:void(0)">Motorsports <i class="fal fa-angle-down"></i></a>
                   <ul>
                     <li>
                       <a href="">Lorem ipsum dolor sit amet.</a>
