--- a/index.html
+++ b/index.html
@@ -23,6 +23,45 @@
   <body class="pg-home"> 
     <div id="wrap">
       <header id="header">
+          <nav class="navigation -mobile">
+            <ul>
+              <li>
+                <a href="">Bentley</a>
+              </li>
+              <li>
+                <a href="">Ferrari</a>
+              </li>
+              <li>
+                <a href="">Lamborghini</a>
+              </li>     
+              <li>
+                <a href="">Maserati</a>
+              </li>                 
+              <li>
+                <a href="">McLaren</a>
+              </li>    
+              <li>
+                <a href="">Pagani</a>
+              </li>           
+              <li>
+                <a href="">Porsche</a>
+              </li>     
+              <li>
+                <a href="javascript:void(0)">Motorsports <i class="fal fa-angle-down"></i></a>
+                <ul>
+                  <li>
+                    <a href="">Lorem ipsum dolor sit amet.</a>
+                  </li>
+                  <li>
+                    <a href="">Lorem, ipsum.</a>
+                  </li>
+                  <li>
+                    <a href="">Lorem ipsum dolor sit amet consectetur.</a>
+                  </li>
+                </ul>
+              </li>   
+            </ul>
+          </nav>        
         <div class="header">
           <div class="container">
             <h1 class="logo">
