- Plugin de reoder adicinado; - Function para chamar o main css em cada child;

--- a/!raw/index.html
+++ b/!raw/index.html
@@ -91,7 +91,7 @@
                   <a href="">Porsche</a>
                 </li>     
                 <li>
-                  <a href="">Motorsports <i class="fal fa-angle-down"></i></a>
+                  <a href="">Motorsports</a>
                   <ul>
                     <li>
                       <a href="">Lorem ipsum dolor sit amet.</a>
